feat(security): implement user profile endpoint and secure product routes
- Add @PreAuthorize to ProductController's POST, PUT and DELETE endpoints
- Implement authenticated() helper in UserService to retrieve current user from JWT
- Add getUserLogged() to UserService and create UserDTO
- Create UserController with GET /users/me endpoint